plugin updated to version 1.2.8

--- a/platforms/android/app/src/main/AndroidManifest.xml
+++ b/platforms/android/app/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <meta-data android:name="com.najva.sdk.metadata.API_KEY" android:value="adf079f2-8a28-4fa7-b702-e3e341c4abef" />
-        <meta-data android:name="com.najva.sdk.metadata.WEBSITE_ID" android:value="7258" />
+        <meta-data android:name="com.najva.sdk.metadata.API_KEY" android:value="aa76de62-47ef-48d0-a109-7e9714eff96f" />
+        <meta-data android:name="com.najva.sdk.metadata.WEBSITE_ID" android:value="15184" />
     </application>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
 </manifest>
