--- a/platforms/android/project.properties
+++ b/platforms/android/project.properties
@@ -13,4 +13,5 @@ android.library.reference.1=CordovaLib
 android.library.reference.2=app
 cordova.system.library.1=androidx.legacy:legacy-support-v4:1.0.0
 cordova.system.library.2=androidx.appcompat:appcompat:1.0.0
-cordova.system.library.3=com.najva.sdk:najva-android-sdk:1.2.3
+cordova.system.library.3=com.najva.sdk:najva-android-sdk:1.2.8
+cordova.system.library.4=com.google.firebase:firebase-messaging:20.1.0
