--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
     "cordova-plugin-androidx-adapter": "^1.1.0",
     "cordova-plugin-whitelist": "1",
     "cordova.plugins.diagnostic": "^5.0.1",
-    "najva": "^1.2.5"
+    "najva": "^1.2.8"
   },
   "cordova": {
     "plugins": {
       "cordova-plugin-whitelist": {},
-      "najva": {},
       "cordova.plugins.diagnostic": {
         "ANDROID_SUPPORT_VERSION": "28.+"
       },
       "cordova-plugin-androidx": {},
-      "cordova-plugin-androidx-adapter": {}
+      "cordova-plugin-androidx-adapter": {},
+      "najva": {}
     },
     "platforms": [
       "android"
