--- a/platforms/android/app/build.gradle
+++ b/platforms/android/app/build.gradle
@@ -295,7 +295,8 @@ dependencies {
     implementation(project(path: ":CordovaLib"))
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
     implementation "androidx.appcompat:appcompat:1.0.0"
-    implementation "com.najva.sdk:najva-android-sdk:1.2.3"
+    implementation "com.najva.sdk:najva-android-sdk:1.2.8"
+    implementation "com.google.firebase:firebase-messaging:20.1.0"
     // SUB-PROJECT DEPENDENCIES END
 }
 
